--- a/CSS/video.css
+++ b/CSS/video.css
@@ -15,7 +15,7 @@
         }
         .video-container {
             position: relative;
-            width: 80vw; /* Keeps black areas on the sides */
+            width: 100vw;
             height: 100vh;
             display: flex;
             justify-content: center;
@@ -25,7 +25,7 @@
         video {
             width: 100%;
             height: 100%;
-            object-fit: contain;
+            object-fit: cover;
         }
         .controls {
             display: none;
@@ -58,7 +58,7 @@
         }
         .floating-heart {
             position: absolute;
-            font-size: 50px; /* Increased size */
+            font-size: 80px;
             animation: floatAnimation 6s infinite ease-in-out;
         }
         @keyframes floatAnimation {
